<resources>
    <string name="app_name">Productivife</string>
    <!--Sign up and login-->
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">logout</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <!--To do menu-->
    <string name="welcome">Welcome</string>
    <string name="userName">--</string>
    <string name="userEmail">--</string>
    <string name="add">Add</string>
    <string name="toDo">My To-Do list</string>
    <string name="archived">Archived</string>
    <!--Facebook-->
    <string name="facebook_app_id">722277378885577</string>
    <string name="fb_login_protocol_scheme">fb722277378885577</string>
    <string name="facebook_client_token">be775e6532c79d4834e7ddfcf0d98ff2</string>
    <string name="uid">Uid</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="deleteConfirmation">Do you really want to delete this item? This process cannot be undone</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">edit</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <!--Add items-->
    <string-array name="priorities">
        <item>Important</item>
        <item>Normal</item>
        <item>Low</item>
    </string-array>


</resources>