<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardUseCompatPadding="true"
                android:padding="0.2dp"
                app:cardCornerRadius="5dp">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textColor="#ffff"
                        android:fontFamily="@font/dmsans"
                        android:textSize="20sp"/>
                    <ProgressBar
                        android:id="@+id/pbUser"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/tvUserName"
                        android:text="@string/userName"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffff"
                        android:fontFamily="@font/dmsans"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/tvUserEmail"
                        android:text="@string/userEmail"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffff"
                        android:fontFamily="@font/dmsans"
                        android:textSize="20sp"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>


</FrameLayout>